Banner done -Added BG -Set up sign up

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h1 class="striking">FORMAT CAMERA</h1>
           </div>
           <div class="email">
-            <span>
+            <span class="us">
               Email us to request a demo and be in our waiting list for the <strong>Febuary 2017</strong> release!
             </span>
             <div class="button">Join the waiting list</div>
